tests/compile-tests/04-default-sealed-trait-does-not-exist.stderr
error[E0433]: failed to resolve: could not find `private` in the crate root
 --> tests/compile-tests/04-default-sealed-trait-does-not-exist.rs:3:1
  |
3 | sealed_typestate!(Foo<_> { Bar, Baz });
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `private` in the crate root
  |
  = note: this error originates in the macro `sealed_typestate` (in Nightly builds, run with -Z macro-backtrace for more info)
