tests/compile-tests/04-default-sealed-trait-does-not-exist.rs
use sealed_typestate::sealed_typestate;

sealed_typestate!(Foo<_> { Bar, Baz });

fn main() {}
